Fix - update layout on smaller screens for About section

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -17,6 +17,7 @@
 
 .photo {
   height: 250px;
+  width: 250px;
   flex-shrink: 0;
   border-radius: 10px;
   object-fit: cover; /* to prevent stretching */
@@ -27,6 +28,16 @@
     flex-direction: column;
     text-align: center;
     padding: var(--spacing-standard);
+  }
+
+  .about > div {
+    order: 1;
+  }
+
+  .photo {
+    order: 2;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .photoIcon {
